<resources>
    <string name="app_name">news</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share News</string>
    <string name="snackbar_undo">Undo</string>
    <string name="successfully_deleted_message">Successfully deleted!</string>
    <string name="home_toolbar">Top News</string>
    <string name="category">Category</string>
    <string name="hot_news">HOT NEWS</string>
    <string name="bsn">BS NURSING</string>
    <string name="law">LAW</string>
    <string name="ab_polsci">AB POL.SCI</string>
    <string name="bs_pharma">BS PHARMA</string>
    <string name="bs_psych">BS PSYCH</string>
    <string name="bs_it">BSIT</string>
    <string name="bsa">BSA</string>
    <string name="bstm">BSTM</string>
    <string name="bs_crim">BS CRIM</string>
    <string name="bshm">BSHM</string>
    <string name="bs_entrep">BS ENTREP</string>
    <string name="beed">BEED</string>
    <string name="bsed">BSED</string>
    <string name="news_detail">News Detail</string>
    <string name="save_toolbar">Favorite News</string>
    <string name="search_toolbar">Search News</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="leave_feedback2">Let us know how you like the app.</string>
    <string name="language">Language</string>
    <string name="language2">You can change the application language from the device settings.</string>
    <string name="faq">FAQ</string>
    <string name="terms">Terms and Conditions</string>
    <string name="sign_out">Sign Out</string>

</resources>