<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        style="@style/CategoryFrame"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.668"
        tools:viewBindingIgnore="true">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/log_out"
            app:tint="@color/blue" />

        <TextView
            style="@style/TextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_out"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ToolbarBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/gold">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="sans-serif-medium"
            android:text="@string/settings"
            android:textColor="@color/gold"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/general"
        style="@style/TextColor2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/feedback_cardview1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/CategoryFrame"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.123"
        tools:ignore="DuplicateIds">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/feedback"
            app:tint="@color/blue" />

        <TextView
            style="@style/TextColor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/leave_feedback"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/leave_feedback2"
            style="@style/TextColor2"
            android:textSize="12sp"
            android:textStyle="normal" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        style="@style/CategoryFrame"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.325">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/faq"
            app:tint="@color/blue" />

        <TextView
            style="@style/TextColor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/faq"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/feedback_cardview7"
        style="@style/CategoryFrame"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="215dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/language"
            app:tint="@color/blue" />

        <TextView
            style="@style/TextColor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/language"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TextColor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/language2"
            android:textSize="12sp"
            android:textStyle="normal" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        style="@style/CategoryFrame"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.471">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/terms"
            app:tint="@color/blue" />

        <TextView
            style="@style/TextColor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/terms"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>